Major JS refactoring, and some other small fixes

--- a/app/jade/index.jade
+++ b/app/jade/index.jade
@@ -85,7 +85,7 @@ html
       a(href="https://www.olark.com/site/2927-692-10-4152/contact", title="Contact us", target="_blank") Questions? Feedback?
       | powered by
       a(href="http://www.olark.com?welcome", title="Olark live chat software") Olark live chat software
-    <!-- end olark code -->
+    // end olark code
 
     // vendor.js is currently empty
     // build:js scripts/vendor.js
@@ -94,5 +94,9 @@ html
     // endbuild
 
     // build:js scripts/main.js
+    script(src='scripts/extensions.js')
+    script(src='scripts/formula_anim.js')
+    script(src='scripts/formula_validator.js')
+    script(src='scripts/formula_submitter.js')
     script(src='scripts/main.js')
     // endbuild
