--- a/app/styles/main.styl
+++ b/app/styles/main.styl
@@ -209,8 +209,10 @@ form
 @keyframes punch-ticket
   0%
     transform rotateX(0deg) translateY(0)
+    box-shadow initial
   35%
     transform rotateX(-180deg) translateY(0)
+    box-shadow none
   50%
     transform rotateX(-180deg) translateY(80px)
   65%
