--- a/app/styles/_vars.styl
+++ b/app/styles/_vars.styl
@@ -1,5 +1,5 @@
 field-height           = 45px
-number-inputs          = 3
+number-inputs          = 4
 label-height           = field-height
 label-padding          = 10px
 input-group-margin-top = 70px
@@ -13,3 +13,5 @@ ff-padding-left        = 30px
 ff-padding = ff-padding-top ff-padding-right ff-padding-bottom ff-padding-left
 
 input-group-height = label-height + input-group-margin-top
+
+formula-height = (number-inputs * input-group-height + ff-padding-top + ff-padding-bottom)px
