--- a/app/styles/main.styl
+++ b/app/styles/main.styl
@@ -70,13 +70,14 @@ iframe[name*='dupe-frame']
   .primary-window
     border-radius 4px
     box-shadow 0 0 15px rgba(0,0,0,0.2)
-    position relative
+    position absolute
 
     width 100%
     height formula-height
     display inline-table
     background radial-gradient(circle, #f2f2f2 0%, #ebebeb 100%)
-    transition all ease 0.5s
+    transition transform ease 0.5s,
+               left ease 0.5s
 
     transform-origin top center
 
@@ -87,11 +88,31 @@ iframe[name*='dupe-frame']
     top -150px
     left 0
 
-    &.page ~ .page
-      top -1 * (input-group-height * number-inputs + ff-padding-top + ff-padding-bottom + header-height / 2)
+    &.page
+      opacity 0
 
     &.page.current
       z-index 1
+      opacity 1
+
+    i.back-btn
+      position absolute
+      left 20px
+      top 20px
+      font-style normal
+      color rgba(0,0,0,0.5)
+      transition color ease 0.5s
+      cursor pointer
+      user-select none
+
+      &:hover
+        color rgb(0,0,0)
+
+      &:before
+        content '\2190'
+        margin-right 10px
+        position relative
+        top -1px
 
     .thanks
       display none
@@ -107,7 +128,7 @@ iframe[name*='dupe-frame']
       img
         position relative
         top 10px
-        height 300px
+        height 400px
 
   &:focus
     box-shadow 0 0 5px rgba(0,0,0,0.25)
@@ -159,48 +180,48 @@ iframe[name*='dupe-frame']
       // on form now, lest it overlap with next-btn
       left -30px
     .primary-window
-      transform rotateY(-3deg) translateZ(-8px)
+      transform rotateY(-1deg) translateZ(-8px)
       box-shadow inset 0 30px rgba(0,0,0,0.015),
                  inset 0 25px rgba(0,0,0,0.02),
                  inset 0 10px rgba(0,0,0,0.025)
 
     .next-btn
-      height formula-height + 31px
-      top (header-height / 2)px - 16px
-      right -34px
+      height formula-height + 6px
+      top (header-height / 2)px - 3px
+      right -20px
       transform rotateY(7deg) translateZ(-8px)
       -moz-transform rotateY(7deg) translateZ(-8px) translateX(-3px) translateY(-6px)
 
       &:hover
-        right -36px
+        right -23px
 
   &.shuffle
-    .page.prev
+    .page
       left -300px
 
     .page.next
+      opacity 1
       left 450px
+      transform rotateY(1deg)
 
     &.reverse
-      .page.prev
+      .page
         left 450px
 
       .page.next
+        opacity 1
         left -300px
+        transform rotateY(-1deg)
 
   &.punched
 
     .primary-window
       animation 3s punch-ticket
+      & *
+        opacity 0
 
     .next-btn
       display none
-
-    .input-group
-      opacity 0
-
-    .submit-btn
-      opacity 0
 
     .thanks
       display block
@@ -214,6 +235,9 @@ iframe[name*='dupe-frame']
 
       .thanks
         opacity 1
+        transform rotateY(180deg) translateX(700px)
+        & *
+          opacity 1
 
 // FUKKKKKKiNG FIREFOX
 // NOTE  the build kills the moz keyframes because it's a bitch about this shit.
@@ -251,11 +275,8 @@ iframe[name*='dupe-frame']
     transform rotateX(180deg) translateY(0)
   50%
     transform rotateX(180deg) translateY(80px)
-    height 620px
   65%
     transform rotateX(180deg) translateY(0)
-    height 620px
   // for some reason, IE flips Z.
   100%
     transform rotateX(-180deg) rotateZ(180deg)
-    height 620px
