--- a/app/styles/main.styl
+++ b/app/styles/main.styl
@@ -128,7 +128,7 @@ iframe[name*='dupe-frame']
       img
         position relative
         top 10px
-        height 400px
+        height 360px
 
   &:focus
     box-shadow 0 0 5px rgba(0,0,0,0.25)
@@ -225,6 +225,7 @@ iframe[name*='dupe-frame']
 
     .thanks
       display block
+      transform rotateY(180deg) translateX(700px)
 
     // because firefox is a bitch.
     &.end
