--- a/app/styles/formula-inputs.styl
+++ b/app/styles/formula-inputs.styl
@@ -80,6 +80,9 @@
       color #aaa
       box-sizing border-box
 
+      @media all and (max-height: 800px)
+        margin-top -1 * field-height + 1px
+
     &:focus
       outline none
       box-shadow -1px 1px 2px rgba(0,0,0,0.07),
@@ -141,6 +144,10 @@
       margin-top 0
       margin-bottom 0
       box-shadow none
+
+    &~.glance
+      @media all and (max-height: 800px)
+        height field-height - 7px
 
   .glance
     height field-height - 2px
