Give more pixels to people with short screens

--- a/app/styles/main.styl
+++ b/app/styles/main.styl
@@ -250,18 +250,21 @@ iframe[name*='dupe-frame']
       width 250px
       height 250px
 
+    .forcefield
+      padding ff-padding-top - 20px ff-padding-right ff-padding-bottom ff-padding-left
+
     .primary-window
       top -125px
-      height formula-height - 50px
+      height formula-height - 110px
 
     .next-btn
-      top 130px
-      height formula-height - 50px
+      top 127px
+      height formula-height - 110px
 
     &.persp
       .next-btn
         top 123px
-        height formula-height - 46px
+        height formula-height - 106px
 
     .glance
       height field-height - 3px
