--- a/app/styles/formula-inputs.styl
+++ b/app/styles/formula-inputs.styl
@@ -6,6 +6,9 @@
     position relative
     transition opacity ease 0.1s 0.325s
 
+    @media all and (max-height: 800px)
+      margin-top input-group-margin-top - 20px
+
     &.checkboxes
       margin-top 0
       overflow hidden
@@ -80,9 +83,6 @@
       color #aaa
       box-sizing border-box
 
-      @media all and (max-height: 800px)
-        margin-top -1 * field-height + 1px
-
     &:focus
       outline none
       box-shadow -1px 1px 2px rgba(0,0,0,0.07),
@@ -102,6 +102,13 @@
 
     &.focus~label
       top -55px
+
+    @media all and (max-height: 800px)
+      &~label
+        margin-top -1 * field-height + 1px
+
+      &:focus~label, &.focus~label
+        top -45px
 
     &~*
       transition top ease 0.3s
