ALL of the pixels for people with short screens

--- a/app/styles/main.styl
+++ b/app/styles/main.styl
@@ -257,6 +257,7 @@ iframe[name*='dupe-frame']
     .header
       width 225px
       height 225px
+      top -10px
 
     .forcefield
       padding ff-padding-top - 10px ff-padding-right ff-padding-bottom ff-padding-left
