Fix meta description and title

--- a/app/jade/index.jade
+++ b/app/jade/index.jade
@@ -2,8 +2,8 @@ doctype html
 html
   head
     meta(charset='utf-8')
-    title EPIC Application Signup
-    meta(name='description', content='Sign up to be notified when the official EPIC Application goes live!')
+    title EPIC Application
+    meta(name='description', content='Apply to EPIC, Northwestern\'s premier Entrepreneurship Student Group!')
     meta(name='viewport', content='width=device-width, initial-scale=1')
 
     // vendor.css is currently empty
