Cleaned up timing, caching, notifications, and various fixes

--- a/app/jade/index.jade
+++ b/app/jade/index.jade
@@ -156,6 +156,7 @@ html
 
     // vendor.js is currently empty
     // build:js scripts/vendor.js
+    script(type='text/javascript', src='bower_components/store/dist/store2.min.js')
     // bower:js
     // endbower
     // endbuild
@@ -165,6 +166,8 @@ html
     // build:js scripts/main.js
     script(src='scripts/extensions.js')
     script(src='scripts/formula_anim.js')
+    script(src='scripts/formula_notify.js'  )
+    script(src='scripts/formula_cache.js')
     script(src='scripts/formula_validator.js')
     script(src='scripts/formula_submitter.js')
     script(src='scripts/main.js')
