--- a/app/styles/formula-inputs.styl
+++ b/app/styles/formula-inputs.styl
@@ -16,10 +16,12 @@
   input[type='checkbox']
     opacity 0
     position absolute
-    width 100%
+    width 125px
+    left 41%
     max-height none
-    height 200px
+    height 125px
     z-index 1
+    cursor pointer
 
     &+label
       display block
