--- a/app/jade/index.jade
+++ b/app/jade/index.jade
@@ -161,14 +161,14 @@ html
     // endbower
     // endbuild
 
-    script(type="text/javascript", src="//api.filepicker.io/v1/filepicker.js")
+    script(type="text/javascript", src="//api.filepicker.io/v1/filepicker.js" async)
 
     // build:js scripts/main.js
-    script(src='scripts/extensions.js')
-    script(src='scripts/formula_anim.js')
-    script(src='scripts/formula_notify.js'  )
-    script(src='scripts/formula_cache.js')
-    script(src='scripts/formula_validator.js')
-    script(src='scripts/formula_submitter.js')
-    script(src='scripts/main.js')
+    script(src='scripts/extensions.js' async)
+    script(src='scripts/formula_anim.js' async)
+    script(src='scripts/formula_notify.js' async)
+    script(src='scripts/formula_cache.js' async)
+    script(src='scripts/formula_validator.js' async)
+    script(src='scripts/formula_submitter.js' async)
+    script(src='scripts/main.js' async)
     // endbuild
