--- a/app/styles/main.styl
+++ b/app/styles/main.styl
@@ -35,6 +35,9 @@ iframe[name*='dupe-frame']
   overflow hidden
   perspective 300px
   perspective-origin center center
+  background-image url(../images/city.svg)
+  background-size cover
+  background-position center center
 
 .formula
   display block
@@ -54,7 +57,7 @@ iframe[name*='dupe-frame']
 
 
   .header
-    background-image url(../images/epic-logo.png)
+    background-image url(../images/wildhacks-logo.svg)
     background-size contain
     background-repeat no-repeat
     width 300px
