--- a/app/jade/index.jade
+++ b/app/jade/index.jade
@@ -98,16 +98,16 @@ html
             .forcefield
               h2 Some Boring Stuff
               .input-group
-                select#gender(required)
-                  option(value) Please Select
+                select#dropdown(required)
+                  option(value='') Please Select
                   option(value='Male') Male
                   option(value='Female') Female
                   option(value='Other') Other
                   option(value='Prefer not to specify') Prefer not to specify
                 label Gender
               .input-group
-                select#shirt(required)
-                  option(value) Please Select
+                select#dropdown(required)
+                  option(value='') Please Select
                   option(value='Small') Small
                   option(value='Medium') Medium
                   option(value='Large') Large
@@ -115,8 +115,8 @@ html
                   option(value='XXL') XXL
                 label Shirt Size (Unisex)
               .input-group
-                select#job(required)
-                  option(value) Please Select
+                select#dropdown(required)
+                  option(value='') Please Select
                   option(value='Small') None
                   option(value='Medium') Internship
                   option(value='Large') Full-Time
