--- a/app/styles/main.styl
+++ b/app/styles/main.styl
@@ -37,7 +37,8 @@ iframe[name*='dupe-frame']
   perspective-origin center center
   background-image url(../images/city.svg)
   background-size cover
-  background-position center center
+  background-position center 0%
+  transition all ease 1s
 
 .formula
   display block
