--- a/app/styles/formula-inputs.styl
+++ b/app/styles/formula-inputs.styl
@@ -26,9 +26,10 @@
     &+label
       display block
       position relative
-      left 41%
+      // left 41%
       height field-height - 20
-      text-align left
+      // text-align left
+      text-align center
       padding 5px 0
       color #888
       transition all ease 0.5s
@@ -83,7 +84,7 @@
     display block
     margin 0 auto
 
-  input[type='text'], input[type='email'], input[type='tel'], textarea, button
+  input[type='text'], input[type='number'], input[type='email'], input[type='tel'], textarea, button
     width 100% // will be overwritten.
     padding 10px 5% // will be overwritten.
     margin 0
